--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,7 +5,26 @@
 <title>List of Pet Owners</title>
 </head>
 <body>
+	<!--  thymesVar id="owner" type="guru.springframework.sfgpetclinic.model.owner -->
 	<h1 th:text="'List of Pet Owners'">List of Pet Owners..</h1>
+
+	<table>
+		<thead>
+		<tr>
+			<th>Id</th>
+			<th>First Name</th>
+			<th>Last Name</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr th:each="owner : ${owners}">
+			<td th:text="${owner?.id}"></td>
+			<td th:text="${owner?.firstName}"></td>
+			<td th:text="${owner?.lastName}"></td>
+		</tr>		
+		</tbody>
+	</table>
+
 
 </body>
 </html>
